<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Old QR's"
        android:id="@+id/OldQrNav"
        android:icon="@drawable/ic_old_qrs"/>
    <item android:title="Add Event"
        android:id="@+id/AddEventnav"
        android:icon="@drawable/ic_add_event"/>
    <item android:title="Events"
        android:id="@+id/OrginzersEventsnav"
        android:icon="@drawable/ic_organizers_events"/>
    <item android:title="Go Back"
        android:id="@+id/GoBacknav"
        android:icon="@drawable/ic_go_back"/>
</menu>