<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Notify"
        android:id="@+id/EventNotifyNav"
        android:icon="@drawable/ic_event_notify"/>
    <item android:title="Map"
        android:id="@+id/EventMapNav"
        android:icon="@drawable/ic_event_map"/>
    <item android:title="Details"
        android:id="@+id/EventDetailsNav"
        android:icon="@drawable/ic_event_details"/>
    <item android:title="Attendees"
        android:id="@+id/EventAttendeesNav"
        android:icon="@drawable/ic_event_attendees"/>
    <item android:title="Back"
        android:id="@+id/EventNavGoback"
        android:icon="@drawable/ic_go_back"/>
</menu>