...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/OrganizerNotifyBtn"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/roundedbuttonstyle"
        android:backgroundTint="@color/purple"
        android:drawableEnd="@drawable/ic_buttonarrow"
...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/OrganizerNotifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="send notification" />
    </com.google.android.material.textfield.TextInputLayout>

...
