...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="286dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/ExploreEventImagee"
                android:layout_width="380dp"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"


...
                android:layout_height="42dp"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ExploreEventDetialsButtone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ExploreEventDetialsButtone"
                android:layout_width="140dp"
                android:layout_height="41dp"
                android:layout_margin="16dp"
...
