<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">



    <Button
        android:id="@+id/dateconfirm"
        android:inputType="date"
        android:hint="Day/Month/Year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm" />


</LinearLayout>