...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OpenEventTitle"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/OpenEventButton"
                android:layout_width="140dp"
                android:layout_height="41dp"
                android:layout_margin="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/purple"
...
